--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
         "preset": "ts-jest",
         "setupFilesAfterEnv": [
             "<rootDir>/jest.setup.ts"
-        ]
+        ],
+        "moduleNameMapper": {
+            "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/file.ts",
+            "\\.(css|less)$": "<rootDir>/src/__mocks__/file.ts"
+        }
     },
     "dependencies": {},
     "devDependencies": {
