--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ptr",
-    "version": "2020.1.0",
+    "version": "2020.2.0",
     "author": "Lorenzo Fontoura",
     "description": "Template for web clients using Typescript and React bundled with Parcel",
     "license": "MIT",
@@ -36,11 +36,19 @@
         "@types/node": "^14.0.23",
         "@types/react": "^16.9.43",
         "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.12",
+        "@types/react-router-dom": "^5.1.6",
+        "@types/redux": "^3.6.0",
+        "@types/reselect": "^2.2.0",
         "@types/styled-components": "^5.1.1",
         "jest": "^26.1.0",
         "parcel-bundler": "^1.12.4",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-redux": "^7.2.2",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.0.5",
+        "reselect": "^4.0.0",
         "styled-components": "^5.1.1",
         "ts-jest": "^26.1.3",
         "typescript": "^3.9.7"
