--- a/package.json
+++ b/package.json
@@ -1,56 +1,32 @@
 {
     "name": "ptr",
-    "version": "2020.2.0",
+    "version": "1.0.0",
     "author": "Lorenzo Fontoura",
     "description": "Template for web clients using Typescript and React bundled with Parcel",
     "license": "MIT",
     "homepage": "https://github.com/rellfy/ptr#readme",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/rellfy/ptr.git"
-    },
+    "repository": "git://github.com/rellfy/ptr.git",
     "bugs": {
         "url": "https://github.com/rellfy/ptr/issues"
     },
     "scripts": {
         "build": "parcel build ./src/index.html --out-dir dist/release --public-url .",
         "dev": "parcel ./src/index.html --out-dir dist/debug --port 8080",
-        "test": "jest",
-        "test-watch": "jest --watch",
+        "test": "mocha",
         "prebuild": "rimraf dist"
-    },
-    "jest": {
-        "preset": "ts-jest",
-        "setupFilesAfterEnv": [
-            "<rootDir>/jest.setup.ts"
-        ],
-        "moduleNameMapper": {
-            "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/file.ts",
-            "\\.(css|less)$": "<rootDir>/src/__mocks__/file.ts"
-        }
     },
     "dependencies": {},
     "devDependencies": {
-        "@testing-library/jest-dom": "^5.11.1",
-        "@testing-library/react": "^10.4.7",
-        "@types/node": "^14.0.23",
-        "@types/react": "^16.9.43",
-        "@types/react-dom": "^16.9.8",
-        "@types/react-redux": "^7.1.12",
-        "@types/react-router-dom": "^5.1.6",
-        "@types/redux": "^3.6.0",
-        "@types/reselect": "^2.2.0",
-        "@types/styled-components": "^5.1.1",
-        "jest": "^26.1.0",
-        "parcel-bundler": "^1.12.4",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-redux": "^7.2.2",
-        "react-router-dom": "^5.2.0",
-        "redux": "^4.0.5",
-        "reselect": "^4.0.0",
-        "styled-components": "^5.1.1",
-        "ts-jest": "^26.1.3",
-        "typescript": "^3.9.7"
+        "@types/node": "^18.7.13",
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/styled-components": "^5.1.26",
+        "parcel": "^2.7.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.0.2",
+        "styled-components": "^5.3.5",
+        "typescript": "^4.4.2"
     }
 }
