--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,36 @@
 ﻿{
     "compilerOptions": {
-        "target": "es5",
-        "lib": ["ES2018", "DOM"],
-        "module": "commonjs",
-        "jsx": "react",
-        "moduleResolution": "node",
-        "declaration": true,
-        "allowJs": true,
-        "noImplicitAny": true,
-        "checkJs": true,
-        "strict": true,
-        "sourceMap": true,
+        "target": "ESNext",
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
+        "types": ["vite/client", "vite-plugin-svgr/client"],
+        "module": "ESNext",
+        "moduleResolution": "Node",
+        "jsx": "react-jsx",
+        "outDir": "./dist",
+        "baseUrl": "./",
+        "useDefineForClassFields": true,
+        "allowJs": false,
         "allowSyntheticDefaultImports": true,
-        "resolveJsonModule": true,
+        "declaration": true,
         "esModuleInterop": true,
+        "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "downlevelIteration": true,
-        "types": ["node", "react"],
-        "typeRoots": ["node_modules/@types"]
-    }
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "removeComments": true,
+        "isolatedModules": true,
+        "incremental": true,
+        "noEmit": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+        "sourceMap": true,
+        "skipLibCheck": true,
+        "strict": true,
+        "strictBindCallApply": true,
+        "strictNullChecks": true
+    },
+    "include": ["./src/**/*"]
 }
