--- a/package.json
+++ b/package.json
@@ -1,32 +1,45 @@
 {
-    "name": "ptr",
-    "version": "1.0.0",
-    "author": "Lorenzo Fontoura",
-    "description": "Template for web clients using Typescript and React bundled with Parcel",
-    "license": "MIT",
-    "homepage": "https://github.com/rellfy/ptr#readme",
-    "repository": "git://github.com/rellfy/ptr.git",
-    "bugs": {
-        "url": "https://github.com/rellfy/ptr/issues"
-    },
-    "scripts": {
-        "build": "parcel build ./src/index.html --out-dir dist/release --public-url .",
-        "dev": "parcel ./src/index.html --out-dir dist/debug --port 8080",
-        "test": "mocha",
-        "prebuild": "rimraf dist"
-    },
-    "dependencies": {},
-    "devDependencies": {
-        "@types/node": "^18.7.13",
-        "@types/react": "^18.0.17",
-        "@types/react-dom": "^18.0.6",
-        "@types/react-router-dom": "^5.3.3",
-        "@types/styled-components": "^5.1.26",
-        "parcel": "^2.7.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-router-dom": "^6.0.2",
-        "styled-components": "^5.3.5",
-        "typescript": "^4.4.2"
-    }
+  "name": "ptr",
+  "version": "1.0.0",
+  "author": "Lorenzo Fontoura",
+  "description": "Template for web clients using Typescript and React bundled with Parcel",
+  "license": "MIT",
+  "homepage": "https://github.com/rellfy/ptr#readme",
+  "repository": "git://github.com/rellfy/ptr.git",
+  "bugs": {
+    "url": "https://github.com/rellfy/ptr/issues"
+  },
+  "scripts": {
+    "build": "parcel build ./src/index.html --out-dir dist/release --public-url .",
+    "dev": "parcel ./src/index.html --out-dir dist/debug --port 8080",
+    "test": "cross-env TS_NODE_PROJECT='./tsconfig.spec.json' nyc --reporter=lcov mocha",
+    "prebuild": "rimraf dist"
+  },
+  "nyc": {
+    "exclude": [
+      "test/**",
+      "**/node_modules/**"
+    ]
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.7.13",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
+    "chai": "^4.3.6",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "parcel": "^2.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "styled-components": "^5.3.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.4.2"
+  }
 }
