--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
         "removeComments": true,
-        "isolatedModules": true,
+        "isolatedModules": false,
         "incremental": true,
         "noEmit": true,
         "noImplicitAny": true,
@@ -32,5 +32,5 @@
         "strictBindCallApply": true,
         "strictNullChecks": true
     },
-    "include": ["./src/**/*"]
+    "include": ["./src/**/*", "d.ts"]
 }
