--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ptr",
   "version": "1.0.0",
   "author": "Lorenzo Fontoura",
-  "description": "Template for web clients using Typescript and React bundled with Parcel",
+  "description": "Template for web clients using Typescript and React bundled with vite",
   "license": "MIT",
   "homepage": "https://github.com/rellfy/ptr#readme",
   "repository": "git://github.com/rellfy/ptr.git",
@@ -10,10 +10,10 @@
     "url": "https://github.com/rellfy/ptr/issues"
   },
   "scripts": {
-    "build": "parcel build ./src/index.html --dist-dir dist/release --public-url .",
-    "dev": "parcel ./src/index.html --dist-dir dist/debug --port 8080",
-    "test": "cross-env TS_NODE_PROJECT='./tsconfig.spec.json' nyc --reporter=lcov mocha",
-    "prebuild": "rimraf dist"
+    "start": "tsc && vite --port 3000",
+    "build": "tsc && vite build",
+    "dev": "vite ./src/index.html --dist-dir dist/debug --port 8080",
+    "test": "cross-env TS_NODE_PROJECT='./tsconfig.spec.json' nyc --reporter=lcov mocha"
   },
   "nyc": {
     "exclude": [
@@ -30,17 +30,18 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "@vitejs/plugin-react": "^2.0.1",
     "chai": "^4.3.6",
     "cross-env": "^7.0.3",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "parcel": "^2.7.0",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "styled-components": "^5.3.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "vite": "^3.0.9"
   }
 }
