--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ESNext",
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
-        "types": ["vite/client", "vite-plugin-svgr/client"],
+        "types": ["vite/client"],
         "module": "ESNext",
         "moduleResolution": "Node",
         "jsx": "react-jsx",
