--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "start": "tsc && vite --port 3000",
     "build": "tsc && vite build",
     "dev": "vite ./src/index.html --dist-dir dist/debug --port 8080",
-    "test": "cross-env TS_NODE_PROJECT='./tsconfig.spec.json' nyc --reporter=lcov mocha"
+    "test": "cross-env TS_NODE_PROJECT='./tsconfig.spec.json' nyc --reporter=lcov mocha",
+    "lint": "eslint . --ext .ts,.tsx,.js --fix --max-warnings 0",
+    "format": "prettier --write './'",
+    "format-staged": "pretty-quick --staged"
   },
   "nyc": {
     "exclude": [
@@ -30,11 +33,18 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
     "chai": "^4.3.6",
     "cross-env": "^7.0.3",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
