--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
     "chai": "^4.3.6",
     "cross-env": "^7.0.3",
