--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
     "chai": "^4.3.6",
+    "classnames": "^2.3.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
@@ -50,7 +51,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "styled-components": "^5.3.5",
+    "sass": "^1.60.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.4.2",
     "vite": "^3.0.9"
